--- a/style.css
+++ b/style.css
@@ -18,19 +18,35 @@ body {
     color: white;
   }
 
- 
+  .dark-mode .nav-link li a{
+    color: white;
+  }
+
+  .dark-mode .nav-link li a:hover{
+    color: white;
+  }
+
+  .dark-mode header{
+    background-color: red;
+  }
 
 header{
     color: white;
     background-color: black;
     text-align: center;
-    padding: 1.5rem;
+    padding: 1rem;
     margin: 0;
+    font-size: 0.9rem;
 
 }
 
 .here a{
     color: white;
+}
+
+#arrow{
+  margin: 1.5rem;
+  font-size: larger;
 }
 
 nav{
@@ -68,10 +84,15 @@ nav{
 #icon{
     padding: 30px;
     
+    
 }
 #icon a{
     color: black;
     
+}
+
+#icon a:hover{
+  color: black;
 }
 
 .network{
@@ -515,5 +536,69 @@ color: white;
   justify-content: center;
   margin-top: 5rem;
   margin-bottom: 2rem;
+}
+
+
+/* About us page*/
+
+.about-sec1{
+  display: flex;
+  margin: 80px 100px 80px 100px;
+}
+
+.about-sec1 img{
+  width: 300px;
+  height: 300px;
+  
+}
+
+.ayodeji{
+  margin-left: 4rem;
+  margin-right: 8rem;
+  margin-top: 1.5rem;
+  width: 45rem;
+}
+
+.ayodeji h3{
+  font-size: xx-large;
+  font-weight: 800;
+  padding-bottom: 1.5rem;
+}
+
+.ayodeji p{
+  color: gray;
+  font-size: 17px ;
+  line-height: 27px;
+  margin-right: 3rem;
+}
+
+.about-sec2{
+  display: flex;
+}
+
+.about-story{
+  margin-right: 6rem;
+}
+
+.about-story2{
+  width: 350px;
+  height: 300px;
+  background-color: rgb(229, 229, 229);
+  margin-left: 3rem;
+  margin-left: 3rem;
+  padding: 3rem;
+}
+
+.about-story2 h5{
+  color: gray;
+  line-height: 2rem;
+}
+
+.about-story2 h4{
+  color: rgb(40, 40, 40);
+  font-size: 0.8rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  
 }
 
